--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -341,6 +341,8 @@ main {
 }
 
 .info-content .name {
+  white-space: wrap !important;
+  max-width: 200px;
   color: var(--white-2);
   font-size: var(--fs-3);
   font-weight: var(--fw-500);
